tests/ui/core_checkpoint_kind_reintroduction.stderr
error[E0432]: unresolved imports `hibana::substrate::cap::advanced::CheckpointKind`, `hibana::substrate::cap::advanced::CommitKind`, `hibana::substrate::cap::advanced::RollbackKind`
 --> tests/ui/core_checkpoint_kind_reintroduction.rs:1:40
  |
1 | ...::{CheckpointKind, CommitKind, RollbackKind};
  |       ^^^^^^^^^^^^^^  ^^^^^^^^^^  ^^^^^^^^^^^^ no `RollbackKind` in `substrate::cap::advanced`
  |       |               |
  |       |               no `CommitKind` in `substrate::cap::advanced`
  |       no `CheckpointKind` in `substrate::cap::advanced`
